# rust-driver-api

http-api/: Cargo.toml  docker-compose.yml  docker.md  example.md  generate-cert.sh  scylla1.yaml  scylla2.yaml  scylla3.yaml  wymagania.md
http-api/certs/: ca.crt  ca.key  ca.srl  scylla1.crt  scylla1.key  scylla2.crt  scylla2.key  scylla3.crt  scylla3.key
http-api/src/: main.rs  try.rs
