[package]
edition = "2024"
name = "http_api"
version = "0.1.0"
rust-version = "1.85"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
uuid = { version = "1.0", features = ["v4", "serde"] }
bigdecimal = "0.4"
num-bigint = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scylla = { version = "1.3.1", features = ["rustls-023"] }
tokio-rustls = "0.26"
rustls = "0.23.33"
webpki-roots = "0.22"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13"
anyhow = "1.0.100"
base64 = "0.21"
hyper = { version = "0.14", features = ["full"] }
time = "0.3"
bytes = "1.0"

thiserror = "2.0.17"
futures-util = "0.3.31"
